# ecoscope

./: .gitignore
.claude/: settings.local.json
projects/ccfn/dev_scripts/: _smart_data.py  diagnose_smart.py  list_smart_languages.py  smart_download.py
projects/ccfn/tasks/: pyproject.toml
projects/ccfn/tasks/ccfn_tasks/: __init__.py  _client.py  _connection.py
projects/ccfn/workflows/ccfn-esri-dev/: compile.sh  metadata.json  pixi.toml  spec.yaml
projects/ccfn/workflows/ccfn-esri-dev/ecoscope-workflows-ccfn-smart-download-esri-workflow/: Dockerfile  README.md  pixi.toml
projects/ccfn/workflows/ccfn-esri-dev/ecoscope-workflows-ccfn-smart-download-esri-workflow/ecoscope_workflows_ccfn_smart_download_esri_workflow/: cli.py  params.json
projects/ccfn/workflows/ccfn-esri-dev/ecoscope-workflows-ccfn-smart-download-esri-workflow/tests/: conftest.py  test_metadata.py
projects/ccfn/workflows/ccfn-smart-download-dev/: compile.sh  layout.json  metadata.json  pixi.toml  spec.yaml
projects/ccfn/workflows/ccfn-smart-download-dev/ecoscope-workflows-ccfn-smart-download-workflow/: Dockerfile  README.md  pixi.toml
projects/ccfn/workflows/ccfn-smart-download-dev/ecoscope-workflows-ccfn-smart-download-workflow/ecoscope_workflows_ccfn_smart_download_workflow/: cli.py  formdata.py  params.py
projects/ccfn/workflows/ccfn-smart-download-dev/ecoscope-workflows-ccfn-smart-download-workflow/tests/: conftest.py  test_metadata.py
reference/: ecoscope-workflow-build-guide.md  smartconnect-api-7.5.7.yaml
(+4 files in other folders)
